fix overflow block

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,7 +25,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-items: space-between;
-	overflow-x: hidden;
+	/* overflow-x: hidden; */
 }
 
 main {
